# KuzuEventBus

./: .env.example  .gitignore  CHANGELOG.md  COPILOT_CONFIG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PORTS.md  README.md  diagnose-api.sh  docker-compose.dev.yml  docker-compose.yml  setup_dev.sh  test-pitr-clean.sh
apps/casys-http/: Cargo.toml  README.md
apps/casys-http/src/: lib.rs
apps/casys-http/tests/: branches.rs  catalog.rs  commit.rs  gql_parameters_and_is_null.rs  parser.rs  persistence.rs  segments.rs  snapshot.rs  wal.rs
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  check_kuzu_layout.py  entrypoint.sh  pyproject.toml  requirements.txt
backend/migrations/: add_timezones_to_timestamps.sql
backend/scripts/: init_kuzu_schema.cypher  inspect_snapshot.py  migrate_snapshots_to_folder.py  run_query_worker.py  seed_via_api.py  setup_kuzu_schema.py  test_kuzu_direct.py  test_kuzu_queries.py  test_real_db.py  update_database_routes.py
backend/src/api/: README.md  __init__.py  main.py
backend/src/api/__tests__/: test_authentication.py  test_authentication_clean.py  test_authentication_fixed.py  test_endpoints.py  test_query_endpoint.py
backend/src/api/middleware/: __init__.py  authentication.py
backend/src/api/routers/: __init__.py  customers.py  databases.py  queries.py
backend/src/application/: README.md  __init__.py
backend/src/application/__tests__/: test_customer_account_service.py
backend/src/application/dtos/: __init__.py  branching.py  customer_account.py  database_management.py  query_catalog.py  query_execution.py
backend/src/application/services/: __init__.py  customer_account_service.py  database_management_service.py  query_execution_service.py
backend/src/application/usecases/: cancel_query.py  create_customer_api_key.py  create_database_snapshot.py  create_kuzu_database.py  delete_kuzu_database.py  get_customer_details.py  get_kuzu_database_info.py  get_query_results.py  get_query_statistics.py  get_query_status.py  list_customer_api_keys.py  list_database_pitr.py  list_database_snapshots.py  list_kuzu_databases.py  list_query_transactions.py  preview_database_pitr.py  provision_tenant_resources.py  register_customer.py  restore_database_from_snapshot.py  restore_database_pitr.py  revoke_customer_api_key.py  submit_async_query.py  update_customer_subscription_status.py  upload_kuzu_database_file.py
backend/src/domain/: README.md
backend/src/domain/branching/: __init__.py  branch.py  value_objects.py
backend/src/domain/database_management/: README.md  database_path_factory.py  provisioning.py  value_objects.py
backend/src/domain/query_catalog/: __init__.py  value_objects.py
backend/src/domain/query_execution/: README.md
backend/src/domain/shared/: README.md  value_objects.py
backend/src/domain/tenant_management/: README.md  customer_account.py
backend/src/infrastructure/: README.md  config.yaml  dependencies.py  settings.py
backend/src/infrastructure/auth/: README.md  api_key_authentication_service.py  authorization_service.py  jwt_service.py
backend/src/infrastructure/cache/: README.md  redis_cache_service.py
backend/src/infrastructure/database/: README.md  __init__.py  bookmark_repository.py  database_metadata_repository.py  kuzu_database_provisioning.py  kuzu_database_repository.py  minio_bucket_provisioning.py  models.py  query_catalog_repository.py  session.py  snapshot_repository.py  tenant_repository.py
backend/src/infrastructure/events/: README.md  sse_event_service.py
backend/src/infrastructure/file_storage/: README.md  __init__.py  minio_bucket_provisioning.py  minio_service.py
backend/src/presentation/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_key_revocation.py  test_async_query_flow.py  test_branch_endpoints.py  test_database_connectivity.py  test_database_endpoints.py  test_database_restore.py  test_database_snapshots.py  test_pitr_endpoint.py  test_pitr_restore_archive_cleanup.py  test_postgres_query_catalog_repository.py  test_query_authentication.py  test_registration_and_query_flow.py  test_tenant_provisioning.py
backend/tests/unit/: test_resolve_database_id.py
casysdb/: .gitignore  (+6 more)
crates/casys_engine/: Cargo.toml
crates/casys_engine/src/: branch.rs  lib.rs  merge.rs  storage.rs  tx.rs
crates/casys_engine/tests/: persistence_fs.rs
crates/casys_napi/: Cargo.toml
crates/casys_napi/src/: lib.rs
crates/casys_pyo3/: Cargo.toml
crates/casys_pyo3/src/: lib.rs  lib_c_abi.rs
crates/casys_storage_pg/: Cargo.toml
crates/casys_storage_pg/src/: lib.rs
crates/casys_storage_redis/: Cargo.toml
crates/casys_storage_redis/src/: lib.rs
crates/casys_storage_s3/: Cargo.toml
crates/casys_storage_s3/src/: lib.rs
engine/: Cargo.toml  Dockerfile  README.md
engine/src/: lib.rs  main.rs
engine/src/ann/: mod.rs
engine/src/exec/: ast.rs  executor.rs  parser.rs  planner.rs
engine/src/gds/: mod.rs
engine/src/index/: mod.rs  persistence.rs
engine/src/storage/: catalog.rs  manifest.rs  mod.rs  segments.rs  wal.rs
engine/src/txn/: mod.rs
engine/src/types/: mod.rs
engine/tests/: branches.rs  catalog.rs  commit.rs  gql_exists_subqueries.rs  gql_with_clause.rs  gql_with_execution.rs  parser.rs  persistence.rs  query_execution.rs  segments.rs  smoke.rs  snapshot.rs  variable_length_paths.rs  wal.rs
sdk/python/: Cargo.toml  README.md  pyproject.toml  pytest.ini  run_tests.sh
sdk/python/examples/: 01_basic_usage.ipynb  02_orm_entities.ipynb  03_advanced_queries.ipynb  04_variable_length_paths.ipynb  orm_cheatsheet.md
sdk/python/src/: lib.rs
sdk/python/tests/: README.md  __init__.py  conftest.py  test_create_simple.py  test_gql_basic_queries_match_where_orderby.py  test_gql_edge_type_unions.py  test_gql_exists_subqueries.py  test_gql_named_parameters_binding.py  test_gql_variable_length_paths_iso_syntax.py  test_gql_varlen_edge_type_unions.py  test_gql_with_clause_pipeline.py  test_orm_joins_and_any.py  test_orm_session_variable_length_depth_api.py  test_orm_with_relations_pairs.py  test_stats_exposed.py
(+661 files in other folders)
