[workspace]
members = [
  "engine",
  "crates/casys_ffi",
  "crates/casys_core",
  "crates/casys_engine",
  "crates/casys_storage_mem",
  "crates/casys_storage_fs",
]
exclude = ["sdk/python"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
