[package]
name = "casys"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
crc32fast = "1"
casys_engine = { path = "../../crates/casys_engine" }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = "symbols"
