[package]
name = "casys_napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
casys_engine = { path = "../casys_engine", features = ["fs"] }
casys_core = { path = "../casys_core" }
serde_json = "1"
thiserror = { workspace = true }

[build-dependencies]
napi-build = "2"
