[package]
name = "casys_storage_s3"
version = "0.1.0"
edition = "2021"

[dependencies]
casys_core = { path = "../casys_core" }
aws-sdk-s3 = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
thiserror = { workspace = true }
serde_json = "1"

[features]
default = []
s3 = ["aws-sdk-s3", "tokio"]
