[package]
name = "casys-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "casys_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde_json = "1.0"

[dependencies.casys_engine]
package = "casys"
path = "../../engine"

[build-dependencies]
