[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "casys-db"
version = "0.1.0"
description = "Casys - Embedded graph database with ISO GQL support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
keywords = ["graph", "database", "embedded", "gql", "iso-gql"]
authors = [
    {name = "KuzuEventBus Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/kuzueventbus/casys"
Repository = "https://github.com/kuzueventbus/casys"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "casys_engine"
python-source = "python"
python-packages = ["casys_db"]
